replace img with cropped, fix nav item margin

--- a/my-style.css
+++ b/my-style.css
@@ -48,7 +48,6 @@ a:hover {
 
 ul.clean-list {
     margin: 0;
-    padding-left: 1.2em;
     list-style-position: outside;
 }
 
@@ -63,8 +62,6 @@ ul.clean-list {
 	background-color: white;
 	font-size: 1.1em;
 	letter-spacing: .5px;
-	padding-top: 15px;
-	padding-bottom: 10px;
 	text-align: center;
 }
 
@@ -73,6 +70,12 @@ ul.clean-list {
 	width: 100%;
 	padding: 15px 30px;
 }
+
+.cm-main-nav ul {
+    padding: 0;
+    margin: 0;
+}
+
 
 .cm-nav-item-link{
 	border: 1px solid rgba(0,0,0,0);
